--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "rs-portfolio",
-  "homepage": "https://github.com/rahulsuwasiya/rs-portfolio.git",
+  "homepage": "https://rahulsuwasiya.github.io/rs-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,14 +8,14 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy":"gh-pages -d dist"
+    "predeploy": "npm run build",
+     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@reduxjs/toolkit": "^2.5.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.15.0",
-    "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
@@ -33,6 +32,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^6.3.0",
     "globals": "^15.13.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
