--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-     "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.11.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
